--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.16",
+    "@react-three/fiber": "^8.15.11",
     "@studio-freight/react-lenis": "^0.0.47",
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.378.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "three": "^0.183.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
